--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "phonebook",
+  "name": "phonebookbackend",
   "version": "1.0.0",
-  "description": "https://evening-hamlet-41160.herokuapp.com/",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon index.js",
+    "start": "node index.js",
+    "build:ui": "rm -rf build && cd ../phonebookFrontend && npm run build --prod && cp -r build ../phonebookBackend",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
+    "logs:prod": "heroku logs --tail"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alaincodes/phonebook.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alaincodes/phonebook/issues"
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.0",
+    "morgan": "^1.9.1"
   },
-  "homepage": "https://github.com/alaincodes/phonebook#readme"
+  "devDependencies": {
+    "nodemon": "^1.19.2"
+  }
 }
